# flan-t5-frontend

./: Containerfile  Containerfile.prefetch_data  README.md  config.yaml  main_streamlit.py  pyproject.toml  requirements.txt
libs/: apis.py  diff_utils.py  pdf_processor.py  presidio.py  ui.py
