[project]
name = "flan-t5-frontend"
version = "0.1.0"
description = "Frontend application that completes the FLAN-T5 Anonymization Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "docling>=2.0.0",
    "pypdf>=5.1.0",
    "reportlab>=4.2.0",
    "nltk>=3.8.0",
    "presidio-analyzer>=2.2.354",
    "presidio-anonymizer>=2.2.354",
]
